templates: add alerts.w.o
The entry point for Karma (alertmanager UI/dashboard)

Bug: T258948
Change-Id: I4639be24ab4405adbc4e84da596ab51280a3d81d

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -564,6 +564,8 @@ pfw3-codfw      1H  IN A     208.80.153.197
 
 ; Service aliases (alphabetical order)
 
+alerts          5M  IN CNAME    alert1001
+
 annual          1D IN CNAME dyna.wikimedia.org.
 
 apt             300  IN CNAME   apt1001
