--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -68,6 +68,9 @@ _github-challenge-wikimedia.www   1H IN TXT "992c2700d4"
 ; Google Site Verification for gsuite-test.wikimedia.org
 gsuite-test 600 IN TXT  "google-site-verification=TI8r5YSBh1J5ztVl_neyqh5Sqp-3XeOQC8Yvm516w9I"
 
+; Matrix/Element domain verification for foundation.wikimedia.org T261531
+_matrix._tcp.foundation           1H IN SRV         10 5 443 wikimediafoundation.ems.host.
+
 ; Corporate office name server delegation
 corp        1D  IN NS   ns1.corp
 corp        1D  IN NS   ns2.corp
