--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -716,9 +716,9 @@ wiki-mail-eqiad 1H  IN AAAA     2620:0:861:3:208:80:154:91
 wiki-mail-codfw 1H  IN A        208.80.153.46
 wiki-mail-codfw 1H  IN AAAA     2620:0:860:2:208:80:153:46
 
-url-downloader.eqiad  1H  IN A          208.80.154.81 ; urldownloader1002
-url-downloader.codfw  1H  IN A          208.80.153.61 ; urldownloader2002
-url-downloader        1H  IN CNAME      url-downloader.eqiad
+url-downloader.eqiad  5M  IN CNAME urldownloader1002
+url-downloader.codfw  5M  IN A     208.80.153.61 ; urldownloader2002
+url-downloader        5M  IN CNAME url-downloader.eqiad
 
 ; Wikis (alphabetic order)
 
