--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -717,7 +717,7 @@ wiki-mail-codfw 1H  IN A        208.80.153.46
 wiki-mail-codfw 1H  IN AAAA     2620:0:860:2:208:80:153:46
 
 url-downloader.eqiad  5M  IN CNAME urldownloader1002
-url-downloader.codfw  5M  IN A     208.80.153.61 ; urldownloader2002
+url-downloader.codfw  5M  IN CNAME urldownloader2002
 url-downloader        5M  IN CNAME url-downloader.eqiad
 
 ; Wikis (alphabetic order)
