point intake-logging.wikimedia.org to text-next (second-best DC)
Bug: T261340
Bug: T226986
Change-Id: Ic4b537803fb39bdebc3e5c9c5c21d75c3eb1f0c2

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -611,8 +611,8 @@ icinga          5M  IN CNAME    icinga1001
 ldap-icinga     5M  IN CNAME    icinga1001
 icinga-extmon   5M  IN CNAME    icinga1001
 
-intake-logging   1D IN CNAME dyna.wikimedia.org.
-intake-analytics 1D IN CNAME dyna.wikimedia.org.
+intake-logging   600 IN DYNA  geoip!text-next
+intake-analytics 1D  IN CNAME dyna.wikimedia.org.
 
 integration     1D IN CNAME dyna.wikimedia.org.
 irc             1H  IN CNAME    kraz
