dns: point icinga CNAMEs to alert1001
Bug: T247966
Change-Id: I871ea3cd2962e5622622196d44d0f70c5eb2e7aa

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -608,9 +608,9 @@ performance     1D IN CNAME dyna.wikimedia.org.
 horizon         1D IN CNAME dyna.wikimedia.org.
 wikitech        1D IN CNAME dyna.wikimedia.org.
 
-icinga          5M  IN CNAME    icinga1001
-ldap-icinga     5M  IN CNAME    icinga1001
-icinga-extmon   5M  IN CNAME    icinga1001
+icinga          5M  IN CNAME    alert1001
+ldap-icinga     5M  IN CNAME    alert1001
+icinga-extmon   5M  IN CNAME    alert1001
 
 intake-logging   600 IN DYNA  geoip!text-next
 intake-analytics 1D  IN CNAME dyna.wikimedia.org.
