--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -114,8 +114,13 @@ donate          5M  IN TXT  "v=spf1 ip4:91.198.174.0/24 ip4:208.80.152.0/22 ip6:
 _dmarc.donate   1H  IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc@donate.wikimedia.org; ruf=mailto:dmarc@donate.wikimedia.org;"
 
 ; Servers (alphabetic order) << WHAT PART ABOUT THIS IS SO HARD TO UNDERSTAND?
-$INCLUDE netbox/wikimedia.org-ulsfo
 
+; Automated DNS includes
+; Hosts in these sites are completely automated and should be updated via Netbox (except for frack)
+; See https://wikitech.wikimedia.org/wiki/DNS/Netbox
+$INCLUDE netbox/wikimedia.org-ulsfo
+$INCLUDE netbox/wikimedia.org-eqsin
+;
 
 alert1001       1H  IN A    208.80.154.88
 alert1001       1H  IN AAAA 2620:0:861:3:208:80:154:88
@@ -137,8 +142,6 @@ bast2002        1H  IN A    208.80.153.54
 bast2002        1H  IN AAAA 2620:0:860:2:208:80:153:54
 bast3004        1H  IN A    91.198.174.60
 bast3004        1H  IN AAAA 2620:0:862:1:91:198:174:60
-bast5001        1H  IN A    103.102.166.7
-bast5001        1H  IN AAAA 2001:df2:e500:1:103:102:166:7
 civi1001        1H  IN A    208.80.155.11
 cloudceph2001-dev    1H  IN A    208.80.153.39
 cloudceph2001-dev    1H  IN AAAA 2620:0:860:2:208:80:153:39
@@ -199,10 +202,6 @@ dns3001         1H  IN A    91.198.174.61
 dns3001         1H  IN AAAA 2620:0:862:1:91:198:174:61
 dns3002         1H  IN A    91.198.174.62
 dns3002         1H  IN AAAA 2620:0:862:1:91:198:174:62
-dns5001         1H  IN A    103.102.166.8
-dns5001         1H  IN AAAA 2001:df2:e500:1:103:102:166:8
-dns5002         1H  IN A    103.102.166.9
-dns5002         1H  IN AAAA 2001:df2:e500:1:103:102:166:9
 frbast-eqiad    1H  IN A    208.80.155.8
 frbast-codfw    1H  IN A    208.80.152.231
 frdata-eqiad    1H  IN A    208.80.155.10
@@ -235,8 +234,6 @@ install2003     1H  IN A    208.80.153.51 ; VM on ganeti01.svc.codfw.wmnet
 install2003     1H  IN AAAA 2620:0:860:2:208:80:153:51 ; VM on ganeti01.svc.codfw.wmnet
 install3001     1H  IN A    91.198.174.63  ; VM on ganeti01.svc.esams.wmnet
 install3001     1H  IN AAAA 2620:0:862:1:91:198:174:63 ; VM on ganeti01.svc.esams.wmnet
-install5001     1H  IN A    103.102.166.13 ; VM on ganeti01.svc.eqsin.wmnet
-install5001     1H  IN AAAA 2001:df2:e500:1:103:102:166:13 ; VM on ganeti01.svc.eqsin.wmnet
 irc2001         1H  IN A    208.80.153.62 ; VM on ganeti01.svc.codfw.wmnet
 irc2001         1H  IN AAAA 2620:0:860:2:208:80:153:62 ; VM on ganeti01.svc.codfw.wmnet
 kraz            1H  IN A    208.80.153.44 ; VM on ganeti01.svc.codfw.wmnet
@@ -290,8 +287,6 @@ ripe-atlas-codfw 1H IN A    208.80.152.244
 ripe-atlas-codfw 1H IN AAAA 2620:0:860:201:208:80:152:244
 ripe-atlas-esams 1H IN A    91.198.174.132
 ripe-atlas-esams 1H IN AAAA 2620:0:862:201:91:198:174:132
-ripe-atlas-eqsin 1H IN A    103.102.166.20
-ripe-atlas-eqsin 1H IN AAAA 2001:df2:e500:201:103:102:166:20
 seaborgium      1H  IN A    208.80.154.79 ; VM on ganeti01.svc.eqiad.wmnet
 serpens         1H  IN A    208.80.153.49 ; VM on ganeti01.svc.codfw.wmnet
 urldownloader1001 1H  IN A    208.80.154.29 ; VM on ganeti01.svc.eqiad.wmnet
@@ -361,19 +356,11 @@ donate-lb.ulsfo     1H IN AAAA 2620:0:863:ed1a::1 ; same IP of text-lb
 donate-lb.ulsfo     1H IN MX 10    mx1001
 donate-lb.ulsfo     1H IN MX 50    mx2001
 
-;;; eqsin
-text-lb.eqsin       1H IN A 103.102.166.224
-text-lb.eqsin       1H IN AAAA 2001:df2:e500:ed1a::1
-test-lb.eqsin       1H IN A 103.102.166.225 ; Temporary for limited testing in T237492 - Do not use!
-test-lb.eqsin       1H IN AAAA 2001:df2:e500:ed1a::2 ; Temporary for limited testing in T237492 - Do not use!
-donate-lb.eqsin     1H IN A 103.102.166.224
-donate-lb.eqsin     1H IN AAAA 2001:df2:e500:ed1a::1
+;;; eqsin (only records not auto-generated from Netbox)
+donate-lb.eqsin     1H IN A 103.102.166.224 ; same IP of text-lb
+donate-lb.eqsin     1H IN AAAA 2001:df2:e500:ed1a::1 ; same IP of text-lb
 donate-lb.eqsin     1H IN MX 10    mx1001
 donate-lb.eqsin     1H IN MX 50    mx2001
-ncredir-lb.eqsin    1H IN A 103.102.166.226
-ncredir-lb.eqsin    1H IN AAAA 2001:df2:e500:ed1a::3
-upload-lb.eqsin     1H IN A 103.102.166.240
-upload-lb.eqsin     1H IN AAAA 2001:df2:e500:ed1a::2:b
 
 ;;; codfw
 text-lb.codfw       1H IN A 208.80.153.224
@@ -521,15 +508,6 @@ mr1-esams       1H  IN A    91.198.174.247
 mr1-esams       1H  IN AAAA 2620:0:862:ffff::1
 mr1-esams.oob   1H  IN A    164.138.24.90
 mr1-esams.oob   1H  IN AAAA 2a02:2770:c011::2
-
-cr2-eqsin       1H  IN A    103.102.166.130
-cr2-eqsin       1H  IN AAAA 2001:df2:e500:ffff::3
-cr3-eqsin       1H  IN A    103.102.166.131
-cr3-eqsin       1H  IN AAAA 2001:df2:e500:ffff::4
-mr1-eqsin       1H  IN A    103.102.166.128
-mr1-eqsin       1H  IN AAAA 2001:df2:e500:ffff::1
-mr1-eqsin.oob   1H  IN A    27.111.227.106
-mr1-eqsin.oob   1H  IN AAAA 2403:b100:3001:9::2
 
 pfw3-eqiad      1H  IN A     208.80.154.219
 
