--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -120,7 +120,7 @@ _dmarc.donate   1H  IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc@donate.w
 ; See https://wikitech.wikimedia.org/wiki/DNS/Netbox
 $INCLUDE netbox/wikimedia.org-ulsfo
 $INCLUDE netbox/wikimedia.org-eqsin
-;
+$INCLUDE netbox/wikimedia.org-esams
 
 alert1001       1H  IN A    208.80.154.88
 alert1001       1H  IN AAAA 2620:0:861:3:208:80:154:88
@@ -140,8 +140,6 @@ bast1002        1H  IN A    208.80.154.86
 bast1002        1H  IN AAAA 2620:0:861:3:208:80:154:86
 bast2002        1H  IN A    208.80.153.54
 bast2002        1H  IN AAAA 2620:0:860:2:208:80:153:54
-bast3004        1H  IN A    91.198.174.60
-bast3004        1H  IN AAAA 2620:0:862:1:91:198:174:60
 civi1001        1H  IN A    208.80.155.11
 cloudceph2001-dev    1H  IN A    208.80.153.39
 cloudceph2001-dev    1H  IN AAAA 2620:0:860:2:208:80:153:39
@@ -198,10 +196,6 @@ dns2001         1H  IN A    208.80.153.77
 dns2001         1H  IN AAAA 2620:0:860:3:208:80:153:77
 dns2002         1H  IN A    208.80.153.111
 dns2002         1H  IN AAAA 2620:0:860:4:208:80:153:111
-dns3001         1H  IN A    91.198.174.61
-dns3001         1H  IN AAAA 2620:0:862:1:91:198:174:61
-dns3002         1H  IN A    91.198.174.62
-dns3002         1H  IN AAAA 2620:0:862:1:91:198:174:62
 frbast-eqiad    1H  IN A    208.80.155.8
 frbast-codfw    1H  IN A    208.80.152.231
 frdata-eqiad    1H  IN A    208.80.155.10
@@ -232,8 +226,6 @@ install1003     1H  IN A    208.80.154.32 ; VM on ganeti01.svc.eqiad.wmnet
 install1003     1H  IN AAAA 2620:0:861:1:208:80:154:32 ; VM on ganeti01.svc.eqiad.wmnet
 install2003     1H  IN A    208.80.153.51 ; VM on ganeti01.svc.codfw.wmnet
 install2003     1H  IN AAAA 2620:0:860:2:208:80:153:51 ; VM on ganeti01.svc.codfw.wmnet
-install3001     1H  IN A    91.198.174.63  ; VM on ganeti01.svc.esams.wmnet
-install3001     1H  IN AAAA 2620:0:862:1:91:198:174:63 ; VM on ganeti01.svc.esams.wmnet
 irc2001         1H  IN A    208.80.153.62 ; VM on ganeti01.svc.codfw.wmnet
 irc2001         1H  IN AAAA 2620:0:860:2:208:80:153:62 ; VM on ganeti01.svc.codfw.wmnet
 kraz            1H  IN A    208.80.153.44 ; VM on ganeti01.svc.codfw.wmnet
@@ -285,8 +277,6 @@ ripe-atlas-eqiad 1H IN A    208.80.155.69
 ripe-atlas-eqiad 1H IN AAAA 2620:0:861:202:208:80:155:69
 ripe-atlas-codfw 1H IN A    208.80.152.244
 ripe-atlas-codfw 1H IN AAAA 2620:0:860:201:208:80:152:244
-ripe-atlas-esams 1H IN A    91.198.174.132
-ripe-atlas-esams 1H IN AAAA 2620:0:862:201:91:198:174:132
 seaborgium      1H  IN A    208.80.154.79 ; VM on ganeti01.svc.eqiad.wmnet
 serpens         1H  IN A    208.80.153.49 ; VM on ganeti01.svc.codfw.wmnet
 urldownloader1001 1H  IN A    208.80.154.29 ; VM on ganeti01.svc.eqiad.wmnet
@@ -379,19 +369,12 @@ git-ssh.codfw       1H  IN AAAA 2620:0:860:ed1a::3:fa
 
 ldap-ro.codfw       1H  IN A    208.80.153.252
 
-;;; esams
-text-lb.esams       1H IN A 91.198.174.192
-text-lb.esams       1H IN AAAA 2620:0:862:ed1a::1
-test-lb.esams       1H IN A 91.198.174.193 ; Temporary for limited testing in T237492 - Do not use!
-test-lb.esams       1H IN AAAA 2620:0:862:ed1a::2 ; Temporary for limited testing in T237492 - Do not use!
-donate-lb.esams     1H IN A 91.198.174.192
-donate-lb.esams     1H IN AAAA 2620:0:862:ed1a::1
+;;; esams (only records not auto-generated from Netbox)
+donate-lb.esams     1H IN A 91.198.174.192 ; same IP of text-lb
+donate-lb.esams     1H IN AAAA 2620:0:862:ed1a::1 ; same IP of text-lb
 donate-lb.esams     1H IN MX 10    mx1001
 donate-lb.esams     1H IN MX 50    mx2001
-ncredir-lb.esams    1H IN A 91.198.174.194
-ncredir-lb.esams    1H IN AAAA 2620:0:862:ed1a::3
-upload-lb.esams     1H IN A 91.198.174.208
-upload-lb.esams     1H IN AAAA 2620:0:862:ed1a::2:b
+
 
 ; Mobile
 
@@ -497,17 +480,6 @@ mr1-codfw       1H  IN AAAA 2620:0:860:ffff::6
 mr1-codfw.oob   1H  IN A    216.117.46.36
 cr2-eqdfw       1H  IN A    208.80.153.198
 cr2-eqdfw       1H  IN AAAA 2620:0:860:ffff::5
-
-cr3-esams       1H  IN A    91.198.174.245
-cr3-esams       1H  IN AAAA 2620:0:862:ffff::5
-cr2-esams       1H  IN A    91.198.174.244
-cr2-esams       1H  IN AAAA 2620:0:862:ffff::3
-cr3-knams       1H  IN A    91.198.174.246
-cr3-knams       1H  IN AAAA 2620:0:862:ffff::4
-mr1-esams       1H  IN A    91.198.174.247
-mr1-esams       1H  IN AAAA 2620:0:862:ffff::1
-mr1-esams.oob   1H  IN A    164.138.24.90
-mr1-esams.oob   1H  IN AAAA 2a02:2770:c011::2
 
 pfw3-eqiad      1H  IN A     208.80.154.219
 
