add frmx1001.wikimedia.org A/PTR records
Bug: T257245
Change-Id: Id685f4595da0a911c9973a98f8e38e353011ba47

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -202,6 +202,7 @@ frdata-eqiad    1H  IN A    208.80.155.10
 frdev-eqiad     1H  IN A    208.80.155.13
 frmon-eqiad.frdev 1H  IN A    208.80.155.9
 frmon-codfw.frdev 1H  IN A    208.80.152.235
+frmx1001        1H  IN A    208.80.155.15
 frmx2001        1H  IN A    208.80.152.236
 fundraising-eqiad 1H  IN A    208.80.155.14
 gerrit1001      1H  IN A    208.80.154.136
