--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -235,6 +235,8 @@ ldap-replica2001 1H IN A    208.80.153.22 ; VM on ganeti01.svc.codfw.wmnet
 ldap-replica2002 1H IN A    208.80.153.47 ; VM on ganeti01.svc.codfw.wmnet
 ldap-eqiad-replica01 1H IN A    208.80.154.25 ; VM on ganeti01.svc.eqiad.wmnet
 ldap-eqiad-replica02 1H IN A    208.80.154.77 ; VM on ganeti01.svc.eqiad.wmnet
+ldap-replica1001     1H IN A    208.80.154.139
+ldap-replica1001     1H IN AAAA 2620:0:861:2:208:80:154:139
 labstore1006        1H  IN A    208.80.154.7
 labstore1006        1H  IN AAAA 2620:0:861:1:208:80:154:7
 labstore1007        1H  IN A    208.80.155.106
