--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -237,6 +237,8 @@ ldap-eqiad-replica01 1H IN A    208.80.154.25 ; VM on ganeti01.svc.eqiad.wmnet
 ldap-eqiad-replica02 1H IN A    208.80.154.77 ; VM on ganeti01.svc.eqiad.wmnet
 ldap-replica1001     1H IN A    208.80.154.139
 ldap-replica1001     1H IN AAAA 2620:0:861:2:208:80:154:139
+ldap-replica1002     1H IN A    208.80.155.102
+ldap-replica1002     1H IN AAAA 2620:0:861:4:208:80:155:102
 labstore1006        1H  IN A    208.80.154.7
 labstore1006        1H  IN AAAA 2620:0:861:1:208:80:154:7
 labstore1007        1H  IN A    208.80.155.106
