--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -233,6 +233,8 @@ kraz            1H  IN A    208.80.153.44 ; VM on ganeti01.svc.codfw.wmnet
 kraz            1H  IN AAAA 2620:0:860:2:208:80:153:44 ; VM on ganeti01.svc.codfw.wmnet
 ldap-replica2001 1H IN A    208.80.153.22 ; VM on ganeti01.svc.codfw.wmnet
 ldap-replica2002 1H IN A    208.80.153.47 ; VM on ganeti01.svc.codfw.wmnet
+ldap-replica2004 1H IN A    208.80.153.102
+ldap-replica2004 1H IN AAAA 2620:0:860:4:208:80:153:102
 ldap-eqiad-replica01 1H IN A    208.80.154.25 ; VM on ganeti01.svc.eqiad.wmnet
 ldap-eqiad-replica02 1H IN A    208.80.154.77 ; VM on ganeti01.svc.eqiad.wmnet
 ldap-replica1001     1H IN A    208.80.154.139
