--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -18,13 +18,14 @@ $ORIGIN codfw1dev.wikimediacloud.org.
 ; Primary openstack endpoint API used by openstack clients and endpoint catalog
 openstack  5M  IN CNAME  cloudcontrol2001-dev.wikimedia.org.
 
+nat.cloudgw         5M  IN A      185.15.57.1
+wan.cloudgw         5M  IN A      208.80.153.190
+virt.cloudgw        5M  IN A      185.15.57.9
+
 $ORIGIN openstack.codfw1dev.wikimediacloud.org.
 
 ; neutron virtual router cloudinstances2b-gw
-cloudinstances2b-gw 5M  IN A      208.80.153.190
-
-; general outgoing/egress NAT address (routing_source_ip)
-nat                 5M  IN A      185.15.57.1
+cloudinstances2b-gw 5M  IN A      185.15.57.10
 
 ns0                 5M  IN A      208.80.153.76
 ns0                 5M  IN AAAA   2620:0:860:3:208:80:153:76
