switch payments-listener to codfw for final testing
Bug: T265688
Change-Id: I4570b1257d9f646b33be472fb83dff5bc1cf700f

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -485,7 +485,7 @@ payments-codfw  1H  IN A        208.80.152.228
 
 payments-listener-eqiad 1H  IN A    208.80.155.12
 payments-listener-codfw 1H  IN A    208.80.152.233
-payments-listener       5M  IN CNAME        payments-listener-eqiad
+payments-listener       5M  IN CNAME        payments-listener-codfw
 
 people          1D IN CNAME dyna.wikimedia.org.
 
