Shift payments back to eqiad after upgrades
Upgrades all complete. Shifting traffic back to eqiad.

Bug: T265688
Change-Id: Ie6bc6589c694eca2b985dce7d4fa1ddb92d25ef0

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -478,7 +478,7 @@ netbox          1H  IN CNAME    netbox1001
 netbox-exports  1H  IN CNAME    netbox1001
 netbox-next     1H  IN CNAME    netbox-dev2001
 
-payments        5M  IN CNAME    payments-codfw
+payments        5M  IN CNAME    payments-eqiad
 payments.frdev  5M  IN CNAME    payments-codfw
 payments-eqiad  1H  IN A        208.80.155.5
 payments-codfw  1H  IN A        208.80.152.228
