switch frbast.wm.o to frbast-codfw while we upgrade the eqiad bastion
Change-Id: I596569588479a7dd6f2ae59079df079aca7de510

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -433,7 +433,7 @@ ldap-labs.codfw 1H  IN CNAME    serpens
 
 labtest-puppetmaster       300 IN CNAME  labtestpuppetmaster2001
 
-frbast          1H  IN CNAME    frbast-eqiad
+frbast          1H  IN CNAME    frbast-codfw
 frdata          1H  IN CNAME    frdata-eqiad
 frmon.frdev     1H  IN CNAME    frmon-eqiad.frdev
 
