Move codfw public to Netbox automation
This makes the changes necessary to migrate the public networks for codfw
to automation through Netbox (but not service addresses).

Bug: T233183
Change-Id: I41eb56d998a9bf23af4e6ecb977b6a17c48a5c0a

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -122,6 +122,7 @@ $INCLUDE netbox/wikimedia.org-ulsfo
 $INCLUDE netbox/wikimedia.org-eqsin
 $INCLUDE netbox/wikimedia.org-esams
 $INCLUDE netbox/wikimedia.org-eqiad
+$INCLUDE netbox/wikimedia.org-codfw
 
 ; Fundraising tech hosts (no automation)
 civi1001        1H  IN A    208.80.155.11
@@ -137,80 +138,6 @@ fundraising-eqiad 1H  IN A    208.80.155.14
 pay-lvs1001     1H  IN A    208.80.155.2
 pay-lvs1002     1H  IN A    208.80.155.3
 
-; Unmigrated data center hosts (alphabetical order)
-alert2001       1H  IN A    208.80.153.84
-alert2001       1H  IN AAAA 2620:0:860:3:208:80:153:84
-apt2001         1H  IN A    208.80.153.42 ; VM on ganeti01.svc.codfw.wmnet
-apt2001         1H  IN AAAA 2620:0:860:2:208:80:153:42 ; VM on ganeti01.svc.codfw.wmnet
-authdns2001     1H  IN A    208.80.153.17
-authdns2001     1H  IN AAAA 2620:0:860:1:208:80:153:17
-bast2002        1H  IN A    208.80.153.54
-bast2002        1H  IN AAAA 2620:0:860:2:208:80:153:54
-cloudceph2001-dev    1H  IN A    208.80.153.39
-cloudceph2001-dev    1H  IN AAAA 2620:0:860:2:208:80:153:39
-cloudceph2002-dev    1H  IN A    208.80.153.40
-cloudceph2002-dev    1H  IN AAAA 2620:0:860:2:208:80:153:40
-cloudceph2003-dev    1H  IN A    208.80.153.41
-cloudceph2003-dev    1H  IN AAAA 2620:0:860:2:208:80:153:41
-cloudcontrol2001-dev 1H  IN A    208.80.153.59
-cloudcontrol2001-dev 1H  IN AAAA 2620:0:860:2:208:80:153:59
-cloudcontrol2003-dev  1H  IN A    208.80.153.75
-cloudcontrol2003-dev  1H  IN AAAA 2620:0:860:3:208:80:153:75
-cloudcontrol2004-dev  1H  IN A    208.80.153.116
-cloudcontrol2004-dev  1H  IN AAAA 2620:0:860:4:208:80:153:116
-cloudservices2002-dev 1H  IN A    208.80.153.76
-cloudservices2002-dev 1H  IN AAAA 2620:0:860:3:208:80:153:76
-cloudweb2001-dev  1H  IN A    208.80.153.60
-cloudweb2001-dev  1H  IN AAAA 2620:0:860:2:208:80:153:60
-contint2001     1H  IN A    208.80.153.15
-contint2001     1H  IN AAAA 2620:0:860:1:208:80:153:15
-dbmonitor2001   1H IN A        208.80.153.52 ; VM on ganeti01.svc.codfw.wmnet
-dbmonitor2001   1H IN AAAA     2620:0:860:2:208:80:153:52 ; VM on ganeti01.svc.codfw.wmnet
-dns2001         1H  IN A    208.80.153.77
-dns2001         1H  IN AAAA 2620:0:860:3:208:80:153:77
-dns2002         1H  IN A    208.80.153.111
-dns2002         1H  IN AAAA 2620:0:860:4:208:80:153:111
-gerrit2001      1H  IN A    208.80.153.106
-gerrit2001      1H  IN AAAA 2620:0:860:4:208:80:153:106
-icinga2001      1H  IN A    208.80.153.74
-icinga2001      1H  IN AAAA 2620:0:860:3:208:80:153:74
-idp2001         1H  IN A    208.80.153.23 ; VM on ganeti01.svc.codfw.wmnet
-idp2001         1H  IN AAAA 2620:0:860:1:208:80:153:23 ; VM on ganeti01.svc.codfw.wmnet
-idp-test2001    1H  IN A    208.80.153.25 ; VM on ganeti01.svc.codfw.wmnet
-idp-test2001    1H  IN AAAA 2620:0:860:1:208:80:153:25 ; VM on ganeti01.svc.codfw.wmnet
-idp             5M  IN CNAME idp2001.wikimedia.org.
-idp-test        5M  IN CNAME idp-test1001.wikimedia.org.
-install2003     1H  IN A    208.80.153.51 ; VM on ganeti01.svc.codfw.wmnet
-install2003     1H  IN AAAA 2620:0:860:2:208:80:153:51 ; VM on ganeti01.svc.codfw.wmnet
-irc2001         1H  IN A    208.80.153.62 ; VM on ganeti01.svc.codfw.wmnet
-irc2001         1H  IN AAAA 2620:0:860:2:208:80:153:62 ; VM on ganeti01.svc.codfw.wmnet
-kraz            1H  IN A    208.80.153.44 ; VM on ganeti01.svc.codfw.wmnet
-kraz            1H  IN AAAA 2620:0:860:2:208:80:153:44 ; VM on ganeti01.svc.codfw.wmnet
-ldap-replica2003 1H IN A    208.80.153.70
-ldap-replica2003 1H IN AAAA 2620:0:860:3:208:80:153:70
-ldap-replica2004 1H IN A    208.80.153.102
-ldap-replica2004 1H IN AAAA 2620:0:860:4:208:80:153:102
-cloudservices2003-dev 1H  IN A    208.80.153.109
-cloudservices2003-dev 1H  IN AAAA 2620:0:860:4:208:80:153:109
-ldap-corp2001   1H  IN A    208.80.153.48 ; VM on ganeti01.svc.codfw.wmnet
-malmok          1H  IN A    208.80.153.43 ; VM on ganeti01.svc.codfw.wmnet
-malmok          1H  IN AAAA 2620:0:860:2:208:80:153:43 ; VM on ganeti01.svc.codfw.wmnet
-mx2001          1H  IN A    208.80.153.45 ; VM on ganeti01.svc.codfw.wmnet
-mx2001          1H  IN AAAA 2620:0:860:2:208:80:153:45 ; VM on ganeti01.svc.codfw.wmnet
-netbox2001      1H  IN A    208.80.153.12               ; VM on ganeti01.svc.codfw.wmnet
-netbox2001      1H  IN AAAA 2620:0:860:1:208:80:153:12 ; VM on ganeti01.svc.codfw.wmnet
-netbox-dev2001  1H  IN A    208.80.153.117              ; VM on ganeti01.svc.codfw.wmnet
-netbox-dev2001  1H  IN AAAA 2620:0:860:4:208:80:153:117 ; VM on ganeti01.svc.codfw.wmnet
-netmon2001      1H  IN A    208.80.153.110
-netmon2001      1H  IN AAAA 2620:0:860:4:208:80:153:110
-procyon         1H  IN A    208.80.152.245
-ripe-atlas-codfw 1H IN A    208.80.152.244
-ripe-atlas-codfw 1H IN AAAA 2620:0:860:201:208:80:152:244
-serpens         1H  IN A    208.80.153.49 ; VM on ganeti01.svc.codfw.wmnet
-urldownloader2001 1H  IN A    208.80.153.24 ; VM on ganeti01.svc.codfw.wmnet
-urldownloader2001 1H  IN AAAA 2620:0:860:1:208:80:153:24 ; VM on ganeti01.svc.codfw.wmnet
-urldownloader2002 1H  IN A    208.80.153.61 ; VM on ganeti01.svc.codfw.wmnet
-urldownloader2002 1H  IN AAAA 2620:0:860:2:208:80:153:61 ; VM on ganeti01.svc.codfw.wmnet
 
 ; Service aliases
 
@@ -262,21 +189,8 @@ donate-lb.eqsin     1H IN MX 10    mx1001
 donate-lb.eqsin     1H IN MX 50    mx2001
 
 ;;; codfw
-text-lb.codfw       1H IN A 208.80.153.224
-text-lb.codfw       1H IN AAAA 2620:0:860:ed1a::1
-test-lb.codfw       1H IN A 208.80.153.225 ; Temporary for limited testing in T237492 - Do not use!
-test-lb.codfw       1H IN AAAA 2620:0:860:ed1a::2 ; Temporary for limited testing in T237492 - Do not use!
 donate-lb.codfw     1H IN A 208.80.153.224
 donate-lb.codfw     1H IN AAAA 2620:0:860:ed1a::1
-ncredir-lb.codfw    1H IN A 208.80.153.232
-ncredir-lb.codfw    1H IN AAAA 2620:0:860:ed1a::9
-upload-lb.codfw     1H IN A 208.80.153.240
-upload-lb.codfw     1H IN AAAA 2620:0:860:ed1a::2:b
-
-git-ssh.codfw       1H  IN A    208.80.153.250
-git-ssh.codfw       1H  IN AAAA 2620:0:860:ed1a::3:fa
-
-ldap-ro.codfw       1H  IN A    208.80.153.252
 
 ;;; esams (only records not auto-generated from Netbox)
 donate-lb.esams     1H IN A 91.198.174.192 ; same IP of text-lb
@@ -368,17 +282,6 @@ wikimania2019.m     1D IN CNAME dyna.wikimedia.org.
 wikimaniateam.m     1D IN CNAME dyna.wikimedia.org.
 za.m                1D IN CNAME dyna.wikimedia.org.
 
-; Networking
-cr1-codfw       1H  IN A    208.80.153.192
-cr1-codfw       1H  IN AAAA 2620:0:860:ffff::1
-cr2-codfw       1H  IN A    208.80.153.193
-cr2-codfw       1H  IN AAAA 2620:0:860:ffff::2
-mr1-codfw       1H  IN A    208.80.153.196
-mr1-codfw       1H  IN AAAA 2620:0:860:ffff::6
-mr1-codfw.oob   1H  IN A    216.117.46.36
-cr2-eqdfw       1H  IN A    208.80.153.198
-cr2-eqdfw       1H  IN AAAA 2620:0:860:ffff::5
-
 pfw3-codfw      1H  IN A     208.80.153.197
 
 ; Cams
@@ -458,6 +361,9 @@ wikitech        1D IN CNAME dyna.wikimedia.org.
 icinga          5M  IN CNAME    alert1001
 ldap-icinga     5M  IN CNAME    alert1001
 icinga-extmon   5M  IN CNAME    alert1001
+
+idp             5M  IN CNAME idp1001.wikimedia.org.
+idp-test        5M  IN CNAME idp-test1001.wikimedia.org.
 
 intake-logging   600 IN DYNA  geoip!text-next
 intake-analytics 1D  IN CNAME dyna.wikimedia.org.
