templates: replace am with alertmanager
More consistent with existing records

Bug: T266017
Change-Id: I35d7e177b1ba49c8bb908804cbcf347050456612

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -386,9 +386,9 @@ pfw3-codfw      1H  IN A     208.80.153.197
 ; Service aliases (alphabetical order)
 
 ; alertmanager API only, no UI.
-; Used by clients with no puppet-driven configuration
-am1             5M  IN CNAME    alert1001
-am2             5M  IN CNAME    alert2001
+; Should be used only when client's config doesn't come from puppet
+alertmanager-eqiad  5M  IN CNAME    alert1001
+alertmanager-codfw  5M  IN CNAME    alert2001
 
 ; alerts dashboard/UI
 alerts          5M  IN CNAME    alert1001
