--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -371,6 +371,8 @@ intake-analytics 1D  IN CNAME dyna.wikimedia.org.
 integration     1D IN CNAME dyna.wikimedia.org.
 irc             1H  IN CNAME    kraz
 
+klaxon          5M  IN CNAME    alert1001
+
 ldap-eqiad      1H  IN CNAME    seaborgium
 ldap-codfw      1H  IN CNAME    serpens
 
