--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -260,6 +260,7 @@ test-commons.m      1D IN CNAME dyna.wikimedia.org.
 tr.m                1D IN CNAME dyna.wikimedia.org.
 ua.m                1D IN CNAME dyna.wikimedia.org.
 usability.m         1D IN CNAME dyna.wikimedia.org.
+uz.m                1D IN CNAME dyna.wikimedia.org.
 ve.m                1D IN CNAME dyna.wikimedia.org.
 vote.m              1D IN CNAME dyna.wikimedia.org.
 wb.m                1D IN CNAME dyna.wikimedia.org.
@@ -540,6 +541,7 @@ transitionteam   1D IN CNAME dyna.wikimedia.org.
 ua               1D IN CNAME dyna.wikimedia.org.
 uk               1D IN CNAME dyna.wikimedia.org.
 usability        1D IN CNAME dyna.wikimedia.org.
+uz               1D IN CNAME dyna.wikimedia.org.
 ve               1D IN CNAME dyna.wikimedia.org.
 vote             1D IN CNAME dyna.wikimedia.org.
 wb               1D IN CNAME dyna.wikimedia.org.
