--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -357,6 +357,7 @@ grafana         1D IN CNAME dyna.wikimedia.org.
 grafana-labs         1D IN CNAME dyna.wikimedia.org.
 grafana-next         1D IN CNAME dyna.wikimedia.org.    ; to replace grafana-beta which has a confusing name
 grafana-rw           1D IN CNAME dyna.wikimedia.org.
+parsoid-rt-tests     1D IN CNAME dyna.wikimedia.org.
 performance     1D IN CNAME dyna.wikimedia.org.
 horizon         1D IN CNAME dyna.wikimedia.org.
 wikitech        1D IN CNAME dyna.wikimedia.org.
