--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -128,7 +128,9 @@ $INCLUDE netbox/wikimedia.org-codfw
 civi1001        1H  IN A    208.80.155.11
 frbast-eqiad    1H  IN A    208.80.155.8
 frbast-codfw    1H  IN A    208.80.152.231
-frdata-eqiad    1H  IN A    208.80.155.10
+frdata1001      1H  IN A    208.80.155.10
+frdata-eqiad    1H  IN A    208.80.155.16
+frdata-codfw    1H  IN A    208.80.152.237
 frdev-eqiad     1H  IN A    208.80.155.13
 frmon-eqiad.frdev 1H  IN A    208.80.155.9
 frmon-codfw.frdev 1H  IN A    208.80.152.235
@@ -340,7 +342,7 @@ ldap-labs.eqiad 1H  IN CNAME    seaborgium
 ldap-labs.codfw 1H  IN CNAME    serpens
 
 frbast          1H  IN CNAME    frbast-eqiad
-frdata          1H  IN CNAME    frdata-eqiad
+frdata          1H  IN CNAME    frdata1001
 frmon.frdev     1H  IN CNAME    frmon-eqiad.frdev
 
 gerrit        600 IN A        208.80.154.137
